Closed
Bug 1111319
Opened 6 years ago
Closed 6 years ago
Mac: H264 video playback excessively juddery sometimes
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla37
People
(Reporter: jya, Assigned: jya)
References
Details
Attachments
(2 files, 1 obsolete file)
3.20 KB,
patch
|
rillian
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
5.00 KB,
patch
|
Details | Diff | Splinter Review |
On mac, I've noticed that video playback is often juddery. Far more than it ought to be. This is particularly obvious in panning scene like in this video: http://people.mozilla.org/~jyavenard/mediatest/avc3.mp4 Using FFmpeg decoder is super smooth; the the Apple's h264 decoder isn't anywhere as smooth.
Assignee | ||
Comment 1•6 years ago
|
||
frames in that video are returned out of order.
Assignee: nobody → jyavenard
Summary: H264 video playback excessively juddery sometimes → Mac: H264 video playback excessively juddery sometimes
Assignee | ||
Comment 2•6 years ago
|
||
Debugging patch, this will abort whenever we return a frame out of order
Assignee | ||
Comment 3•6 years ago
|
||
Re-order frame according to defined sliding decoding window.
Attachment #8540600 -
Flags: review?(giles)
Comment 4•6 years ago
|
||
Comment on attachment 8540600 [details] [diff] [review] Reorder video frames with respect to decoding sliding window Review of attachment 8540600 [details] [diff] [review]: ----------------------------------------------------------------- r=me with comment addressed. ::: dom/media/fmp4/apple/AppleVDADecoder.cpp @@ +295,1 @@ > mCallback->Output(readyData); Fix indent. This is a single line without the nsRefPtr in DrainReorderedFrames() which I think would also be fine here now that we don't have any other code touching readyData.
Attachment #8540600 -
Flags: review?(giles) → review+
Assignee | ||
Comment 5•6 years ago
|
||
Rebase for new patch, and handle seeks. No crashes so far with this current version of the patch
Assignee | ||
Updated•6 years ago
|
Attachment #8540539 -
Attachment is obsolete: true
Assignee | ||
Comment 6•6 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=a596989277c5
Assignee | ||
Comment 7•6 years ago
|
||
remote: https://hg.mozilla.org/integration/mozilla-inbound/rev/a7e45fb4b943
Comment 8•6 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/a7e45fb4b943
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Comment 9•6 years ago
|
||
Comment on attachment 8540600 [details] [diff] [review] Reorder video frames with respect to decoding sliding window Approval Request Comment [Feature/regressing bug #]: MSE [User impact if declined]: Less consistent testing; sites more likely to serve flash video. [Describe test coverage new/current, TBPL]: Landed on m-c. [Risks and why]: We change the way we reorder frames for display, so playback will be different for some files. Seems to work better in practice than what we had before. [String/UUID change made/needed]: None.
Attachment #8540600 -
Flags: approval-mozilla-aurora?
Updated•6 years ago
|
status-firefox36:
--- → affected
status-firefox37:
--- → fixed
Updated•6 years ago
|
Attachment #8540600 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 11•6 years ago
|
||
Backed out so bug 1111328 would backout cleanly. https://hg.mozilla.org/releases/mozilla-aurora/rev/7c15e189d452
You need to log in
before you can comment on or make changes to this bug.
Description
•