Bug 1111319 - Reorder video frames with respect to decoding sliding window. r=rillian, a=sledru