dom/media/fmp4/apple/AppleVDADecoder.h
@@ -92,6 +92,7 @@ public:
   ReorderQueue mReorderQueue;
   uint32_t mPictureWidth;
   uint32_t mPictureHeight;
+  uint32_t mMaxRefFrames;
 
 private:
   VDADecoder mDecoder;
